<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super Smash Poker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ssp_button_press">onPlayPress</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ssp_settings_ip">IP:</string>
    <string name="ssp_settings_port">Port:</string>
    <string name="ssp_settings_ip0">192</string>
    <string name="Fold">Fold</string>
    <string name="Check">Check</string>
    <string name="Call">Call</string>
    <string name="Raise">Raise</string>
    <string name="quit_button">Quit</string>
    <string name="continue_button">Next Hand</string>
    <string name="ssp_socket_connect">openSocket</string>
    <string name="ssp_socket_close">closeSocket</string>
    <string name="ssp_socket_send">sendMessage</string>
    <string name="ssp_settings_save_button">Save</string>
    <string name="ssp_settings_save">onSettingsSave</string>
    <string name="title_activity_connect">Connect</string>
    <string name="wait_for_connect">Waiting for players to connect</string>
    <string name="ssp_request_join">joinRequest</string>
    <string name="ssp_game_joinbutton">Join Game</string>
    <string name="connect_button">Connect to DE2</string>

</resources>
